[tool.poetry]
authors = ["bucky <buckyroberts@gmail.com>"]
description = "Node for thenewboston blockchain."
license = "MIT"
name = "Node"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "4.0b1"
psycopg2 = "2.9.1"
pymongo = "3.12.1"
python = "^3.9"
python-dotenv = "0.19.1"
requests = "2.26.0"
PyNaCl = "1.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
