[tool.poetry]
authors = ["bucky <buckyroberts@gmail.com>"]
description = "Node for thenewboston blockchain."
license = "MIT"
name = "Node"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "4.0b1"
PyNaCl = "1.4.0"
psycopg2 = "2.9.1"
pymongo = "3.12.1"
python = "^3.9"
python-dotenv = "0.19.1"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.4.0"

[tool.isort]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
