[tool.poetry]
authors = ["bucky <buckyroberts@gmail.com>"]
description = "Node for thenewboston blockchain."
license = "MIT"
name = "Node"
version = "0.1.0"

[tool.poetry.dependencies]
PyNaCl = "1.4.0"
pymongo = "3.12.1"
python = "^3.9"
requests = "2.26.0"
django-split-settings = "^1.1.0"
Django = "^3.2.9"
djongo = "^1.3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.4.0"
colorlog = "^6.6.0"
pdbpp = "^0.10.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "node.config.settings"
python_files = "test_*.py"
testpaths = ["node"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
